test/corpus/top_level.txt
========================
Script Declaration Short
========================

scn Test

---

(source_file
  (script_declaration (script_name)))

=======================
Script Declaration Long
=======================

scriptname Test

---

(source_file
  (script_declaration (script_name)))

====================
Variable Declaration
====================

scn variableDeclaration
int int
short short
long long
float float
array_var neio
string_var neo

---

(source_file
  (script_declaration (script_name))
  (variable_declaration (type) (variable))
  (variable_declaration (type) (variable))
  (variable_declaration (type) (variable))
  (variable_declaration (type) (variable))
  (variable_declaration (type) (variable))
  (variable_declaration (type) (variable)))

============
Block w/ EOL
============

scn block
begin gamemode
word
end

---

(source_file
  (script_declaration (script_name) )
  (block
    (game_feature)
    (statement)))

=============
Block w/o EOL
=============

scn block
begin gamemode
word
end
---

(source_file
  (script_declaration (script_name))
  (block
    (game_feature)
    (statement)))
