test/corpus/variables.txt
===============
Quest Variables
===============
scn test
begin gamemode
let quest.var1 := 1
let quest.var1 := quest.var2 := 2
end
---
(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (let_statement
        (left (quest_variable (reference) (reference)))
        (assignment)
        (right (integer))))
    (statement
      (let_statement
        (left (quest_variable (reference) (reference)))
        (assignment)
        (left (quest_variable (reference) (reference)))
        (assignment)
        (right (integer))))))

===============
Plain Variables
===============
scn test
begin gamemode
let var1 := 1
let var1 := var2 := 2
end
---
(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (let_statement
        (left (reference))
        (assignment)
        (right (integer))))
    (statement
      (let_statement
        (left (reference))
        (assignment)
        (left (reference))
        (assignment)
        (right (integer))))))

===============
Array Variables
===============
scn test
begin gamemode
set x[a] to 1
let x := y[x]
let x[1][y] := x["n"] := x[3] + 1
end
---
(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (set_statement
        (left
          (array_variable
            (reference)
            (subscript (reference))))
        (right (integer))))
    (statement
      (let_statement
        (left (reference))
        (assignment)
        (right
          (array_variable
            (reference)
            (subscript (reference))))))
    (statement
      (let_statement
        (left
          (array_variable
            (reference)
            (subscript (integer))
            (subscript (reference))))
        (assignment)
        (left
          (array_variable
            (reference)
            (subscript (string))))
        (assignment)
        (right
          (array_variable
            (reference)
            (subscript (integer)))
          (binary_operator)
          (integer))))))

=====================
Quest Array Variables
=====================
scn test
begin gamemode
let x.a[a] := x.a[a]
end
---
(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (let_statement
        (left
          (array_variable
            (quest_variable (reference) (reference))
            (subscript (reference))))
        (assignment)
        (right
          (array_variable
            (quest_variable (reference) (reference))
            (subscript (reference))))))))

=====
Slice
=====
scn test
begin gamemode
let a[1:2] := a[:1] := a[1:]
let a[-1:-2] := a[:-1] := a[-1:]
end
---

(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (let_statement
        (left
          (array_variable
            (reference)
            (subscript
              (slice (integer) (integer)))))
        (assignment)
        (left
          (array_variable
            (reference)
            (subscript
              (slice (integer)))))
        (assignment)
        (right
          (array_variable
            (reference)
            (subscript
              (slice (integer)))))))
    (statement
      (let_statement
        (left
          (array_variable
            (reference)
            (subscript
              (slice (integer) (integer)))))
        (assignment)
        (left
          (array_variable
            (reference)
            (subscript
              (slice (integer)))))
        (assignment)
        (right
          (array_variable
            (reference)
            (subscript
              (slice (integer)))))))))

=============
Member Access
=============
scn test
begin gamemode
let x->key := 1
end
---

(source_file
  (script_declaration (reference))
  (block
    (game_feature)
    (statement
      (let_statement
        (left
          (array_variable
            (reference)
            (member_access (reference))))
        (assignment)
        (right (integer))))))
